# bluesky-py-oauth

./: .gitignore  2  Makefile  README.md  alembic.ini  app.py  atproto_oauth.py  dev-frontend.sh  docker-compose.yml  oauth_metadata.py  pyproject.toml  settings.py  tasks.py  worker.py
api-py/: .dockerignore  Dockerfile  alembic.ini  app.py  atproto_oauth.py  campaign_config.py  campaign_scheduler.py  daily_campaign_worker.py  logger_config.py  metrics.py  oauth_metadata.py  pyproject.toml  pytest.ini  queue_config.py  run_tests.sh  scheduler_utils.py  settings.py  tasks.py  test_daily_worker.py  worker.py
api-py/migrations/versions/: 292dfff09bc9_creating_followers_to_get_table.py  2983c3f371ba_extending_campaigns_table_with_total_.py  2c2733f920bb_creating_table_for_oauth_auth_request.py  (+4 more)
api-py/routes/: api.py  auth.py  campaign.py  posts.py  test.py
api-py/tests/: README.md  TEST_RESULTS.md  __init__.py  test_token_refresh.py
frontend/: Dockerfile  components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/app/: app.css  root.tsx  routes.ts
migrations/versions/: 0f00ccb76d46_creating_table_for_oauth_session.py  28b09521042d_creating_table_for_campaigns.py  3814a29cf3f8_extending_campaigns_table_with_user_dld.py  46ba0469f702_changing_is_following_me_and_me_.py
monitoring/prometheus/: prometheus.yml
routes/: api.py  auth.py  me.py
routes/utils/: get_db.py  get_user.py  postgres_connection.py
static/css/: tailwind_output.css
templates/: base.html  base.jinja  bsky_post.html  error.html  home.html  login.html
templates/ui/: button.jinja
(+63 files in other folders)
