[project]
name = "python-oauth-web-app"
version = "0.1.0"
description = "atproto OAuth Flask Backend Client Demo"
authors = [
    { name = "bryan newbold", email = "bnewbold@robocracy.org" }
]
dependencies = [
    "flask[dotenv]>=3",
    "authlib>=1.3",
    "dnspython>=2.6",
    "requests>=2.32",
    "requests-hardened>=1.0.0b3",
    "redis>=6.4.0",
    "alembic>=1.16.0",
    "sqlalchemy>=2.0.43",
    "atproto>=0.0.62",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.setuptools.packages.find]
exclude = ["static", "templates"]
